# congressv2

./: .env.example  .flake8  CNAME  Makefile  Overview.html  README.md  contact.html  contrast.html  index.html  package-lock.json  package.json  pyproject.toml  test.html
Bills/: Affordable Child and Dependent Care Bill (2027).html  Bills.html  Congressional Vote Justification Bill (2027).Html  Corporate Responsibility (CSR) Bill (2027).html  Energy Savings and Lower Bills Bill (2027).html  First-Time Homebuyer 3% Mortgage Bill (2027).html  Good Jobs & Skills Bill (2027).html  Housing Supply and Permitting Modernization Bill (2027).html  Impeachment Continuity and Accountability Bill (2027).html  committee-report-directives-templates-2027.html  communications-integrity-bill-2027.html  continuity-integrity-expansion-bill-2027.html  cra-disapproval-templates-2027.html  emergency-powers-spend-pilot-dod-bill-2027.html  house-litigation-authorization-template-2027.html  nea-wpr-resolution-templates-2027.html  surgical-riders-holman-templates-2027.html
FEC/: FEC_Data.zip.part0417  ccl.txt  cm.txt  cm26.txt  cn24.txt  cn26.txt  weball22.txt  weball24.txt  weball26.txt  webk22.txt  webk24.txt  webk26.txt  webl22.txt  webl24.txt  webl26.txt
accountability/: District_Flyer.html  index.html  (+7 more)
us_congress_pipeline/: Makefile  README.md  pyproject.toml
us_congress_pipeline/src/pipeline/: __init__.py  cli.py  download.py  extract_fec.py  extract_legislators.py  extract_votes.py  link.py  metrics.py  normalize.py  paths.py  sql_models.py
us_congress_pipeline/tests/: test_smoke.py
(+101 files in other folders)
